// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Root /> renders a generic error page when error prop is given 1`] = `
<div
  class="makeStyles-container-34"
>
  <div>
    Something wen't terribly wrong!
  </div>
</div>
`;

exports[`<Root /> renders and matches snapshot 1`] = `
<div
  class="makeStyles-container-1"
>
  <div>
    <div
      class="makeStyles-hero-3"
    >
      <div>
        <h4
          class="MuiTypography-root MuiTypography-h4 MuiTypography-colorInherit"
        >
          Welcome to Trompa's campaign manager!
        </h4>
      </div>
    </div>
  </div>
</div>
`;
